# MS-Thesis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject copy.toml  pyproject.toml
Thesis/: thesis.tex
Thesis/bibs/: bibs.tex  refs.bib
Thesis/chapters/: conclusions.tex  introduction.tex  literature.tex  preliminaries.tex  results.tex  work.tex
Thesis/front/: abstract-eng.tex  abstract.tex  dictionary.tex  info.tex
Thesis/presentation/: robust_persian_asr_thesis_defense.pptx  slides.md
Thesis/styles/: common.tex
configs/: fastconformer_eval.yaml  fastconformer_train.yaml  long_variants.yaml  whisper_large_v3_turbo_eval.yaml  whisper_large_v3_turbo_train.yaml  whisper_medium_eval.yaml  whisper_medium_train.yaml  whisper_small_eval.yaml  whisper_small_train.yaml
configs/speech_enhancement/: cv25_degraded_dataset.yaml  degradation.yaml  fusion_eval.yaml  fusion_train.yaml
docs/: degradation-pipeline-fixes-2026-06.md  enhancement-degradation-fusion-overview.md  script-guide-2.md  script-guide.md  speech-degradation-pipeline.md  speech-enhancement-and-fusion-decisions.md  speech-enhancement-and-fusion-plan.md
docs/degradation-pipeline-architecture/: README.md  diagram.js  index.html  styles.css
docs/fusion-model-architecture/: diagram.js  index.html  styles.css
ml/: __init__.py
ml/asr/: __init__.py  eval_fastconformer.py  eval_whisper_large_v3_turbo.py  eval_whisper_medium.py  eval_whisper_small.py  (+5 more)
notebooks/: project_demo.ipynb
report/: progress-report-2-fa.md  progress-report-2.md  progress-report-fa.md  progress-report.md
server/: __init__.py
(+97 files in other folders)
