[project]
name = "ms-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.41.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
